--- a/database/config.env
+++ b/database/config.env
@@ -1,6 +1,6 @@
 PORT = 4000
 
-MONGO_URI = mongodb://localhost:27017
+MONGO_URI = mongodb+srv://nodejs:nodejsapp@atlascluster.gbkkybf.mongodb.net/?retryWrites=true
 
 JWT_SECRET = abcdefghijkl
 
