--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nodeapi",
   "version": "1.0.0",
   "main": "server.js",
-  "engine": {
+  "engines": {
     "node": ">=14.20.1"
   },
   "type": "module",
